--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         </div>
         <div class="conetnt-image">
 
-            <img src="/img/light_man_copy_26.png" alt="">
+            <img src="./img/light_man_copy_26.png" alt="">
 
         </div>
         <div class="content-bottom">
